--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -31,3 +31,26 @@ jobs:
         cd api_yamdb/
         # запустить написанные разработчиком тесты
         python manage.py test
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        # Проверка доступности репозитория Docker Hub для workflow
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        # Вызов сборщика контейнеров docker
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker
+        # Запуск скрипта авторизации на Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        # Пуш образа в Docker Hub 
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: revun/api_yamdb:latest
