--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Set up Docker Buildx
         # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v2
+        with:
+          context: ./api_yamdb/
       - name: Login to Docker
         # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v2
