--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -7,53 +7,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         python-version: 3.7
 
     - name: Install dependencies
-      run: |
-        # обновление pip
-        python -m pip install --upgrade pip
-        # установка flake8 и его плагинов
+      run: | 
+        python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
-        cd api_yamdb/
-        pip install -r requirements.txt
+        pip install -r ./api_yamdb/requirements.txt 
 
-    - name: Test with flake8 and django tests
+    - name: Test with flake8 and pytest
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd api_yamdb/
-        # запустить написанные разработчиком тесты
-        python manage.py test
+        pytest
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2 
       - name: Set up Docker Buildx
-        # Вызов сборщика контейнеров docker
-        uses: docker/setup-buildx-action@v2
-        with:
-          context: ./api_yamdb/
-      - name: Login to Docker
-        # Запуск скрипта авторизации на Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        # Пуш образа в Docker Hub 
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: revun/api_yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:v2.01.10.2022
+          context: ./api_yamdb/
