--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
     env_file:
       - ./.env
   web:
-    build: ../api_yamdb
-    #image: revun/testworkflow
+    #build: ../api_yamdb
+    image: revun/testworkflow
     restart: always
     volumes:
       - static_value:/app/static/
