--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
   web:
     build: ../api_yamdb
-    #image: revun/testworkflow
+    #image: revun/yamdb_final
     restart: always
     volumes:
       - static_value:/app/static/
