--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:clear
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:clear1
           context: ./api_yamdb/
   deploy:
     runs-on: ubuntu-latest
