--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -6,7 +6,10 @@ COPY requirements.txt /app
 
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
 
-COPY . /.
+COPY ./ .
+COPY ./static/redoc.yaml /app
+
+RUN echo $USER > 1.txt && ls . > 2.txt 
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
 
