--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -7,10 +7,10 @@ COPY requirements.txt /app
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
 
 COPY ./ .
-
+COPY ./test/2.txt /app
 COPY ./static/1.txt /app
 
-RUN echo $USER > 1.txt && ls . > 2.txt 
+RUN echo $USER > a.txt && ls . > b.txt 
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
 
