--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -7,8 +7,7 @@ COPY requirements.txt /app
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
 
 COPY ./ .
-COPY ./test/2.txt /app
-COPY ./static/1.txt /app
+COPY ./test1/1.txt /app
 
 RUN echo $USER > a.txt && ls . > b.txt 
 
