--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     #image: revun/yamdb_final:clear15111
     restart: always
     volumes:
-      - static_value:/app/static/
+      - static_value:/app/staticfiles/
       - media_value:/app/media/
     depends_on:
       - db
@@ -27,7 +27,7 @@ services:
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
+      - static_value:/var/html/staticfiles/
       - media_value:/var/html/media/
 
     depends_on:
