--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name 127.0.0.1;
     server_tokens off;
 
-    location /static/ {
+    location /Static/ {
         root /var/html/;
     }
 
