--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     #image: revun/yamdb_final:clear15111
     restart: always
     volumes:
-      - static_value:/app/Static/
+      - static_value:/app/static/
       - media_value:/app/media/
     depends_on:
       - db
@@ -27,8 +27,8 @@ services:
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ../api_yamdb/Static/redoc.yaml:/var/html/Static/redoc.yaml
-      - static_value:/var/html/Static/
+      - ../api_yamdb/Static/redoc.yaml:/var/html/static/redoc.yaml
+      - static_value:/var/html/static/
       - media_value:/var/html/media/
 
     depends_on:
